Fix flex align-items

--- a/assets/stylesheets/common/locations.scss
+++ b/assets/stylesheets/common/locations.scss
@@ -616,3 +616,7 @@ input.input-location, div.input-location {
 span.map-location{
   width: 58%;
 }
+
+#user-card .location-and-website{
+  align-items: start;
+}
